{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 28,
  "lineage": "f1f20e2a-1f97-19dc-d132-968773556b32",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:893725594362:loadbalancer/nginx-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "nginx-elb-2139099117.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "nginx-elb",
            "idle_timeout": 60,
            "instances": [
              "i-077f03ebc933c4daf",
              "i-08b0d66804fb5eb07",
              "i-0ba760985792653cd"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "nginx-elb",
            "security_groups": [
              "sg-04900d73b4eff1866"
            ],
            "source_security_group": "893725594362/nginx_elb_sg",
            "source_security_group_id": "sg-04900d73b4eff1866",
            "subnets": [
              "subnet-0a846821029f0e863",
              "subnet-0ad0f2a9e7f84afbe"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet",
            "random_integer.rand",
            "aws_iam_instance_profile.nginx_profile",
            "aws_instance.nginx",
            "aws_vpc.vpc",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "aws_iam_role.allow_nginx_s3",
            "aws_s3_bucket.web_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2c275b42dee0b81",
            "arn": "arn:aws:ec2:us-east-1:893725594362:instance/i-077f03ebc933c4daf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-077f03ebc933c4daf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PluralsightKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b916c765b938ddb0",
            "private_dns": "ip-10-1-0-224.ec2.internal",
            "private_ip": "10.1.0.224",
            "public_dns": "ec2-3-88-167-140.compute-1.amazonaws.com",
            "public_ip": "3.88.167.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:893725594362:key/f7578e1a-65e2-42ef-9dfb-c47faf36b259",
                "throughput": 0,
                "volume_id": "vol-0fc730279eab0591a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad0f2a9e7f84afbe",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-nginx1"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-nginx1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0468ac8cfce5e9971"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_vpc.vpc",
            "data.aws_ami.aws_linux",
            "random_integer.rand",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2c275b42dee0b81",
            "arn": "arn:aws:ec2:us-east-1:893725594362:instance/i-08b0d66804fb5eb07",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-08b0d66804fb5eb07",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PluralsightKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d114f94920275244",
            "private_dns": "ip-10-1-1-139.ec2.internal",
            "private_ip": "10.1.1.139",
            "public_dns": "ec2-3-80-249-224.compute-1.amazonaws.com",
            "public_ip": "3.80.249.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:893725594362:key/f7578e1a-65e2-42ef-9dfb-c47faf36b259",
                "throughput": 0,
                "volume_id": "vol-029d7c44e7a6a013f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a846821029f0e863",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-nginx2"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-nginx2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0468ac8cfce5e9971"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet",
            "data.aws_availability_zones.available",
            "data.aws_ami.aws_linux",
            "random_integer.rand",
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_s3_bucket.web_bucket",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2c275b42dee0b81",
            "arn": "arn:aws:ec2:us-east-1:893725594362:instance/i-0ba760985792653cd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-0ba760985792653cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PluralsightKeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e8574ac642940b23",
            "private_dns": "ip-10-1-0-228.ec2.internal",
            "private_ip": "10.1.0.228",
            "public_dns": "ec2-3-94-116-210.compute-1.amazonaws.com",
            "public_ip": "3.94.116.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:893725594362:key/f7578e1a-65e2-42ef-9dfb-c47faf36b259",
                "throughput": 0,
                "volume_id": "vol-094923a6980b605c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad0f2a9e7f84afbe",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-nginx3"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-nginx3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0468ac8cfce5e9971"
            ]
          },
          "dependencies": [
            "aws_iam_role.allow_nginx_s3",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_vpc.vpc",
            "aws_iam_instance_profile.nginx_profile",
            "aws_subnet.subnet",
            "data.aws_ami.aws_linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893725594362:internet-gateway/igw-0d3f9ac1eb23c4376",
            "id": "igw-0d3f9ac1eb23c4376",
            "owner_id": "893725594362",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0ce038eb4a232bc00"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893725594362:route-table/rtb-027cb389b2d56d7c6",
            "id": "rtb-027cb389b2d56d7c6",
            "owner_id": "893725594362",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3f9ac1eb23c4376",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce038eb4a232bc00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7f37013b0e2ab3d",
            "route_table_id": "rtb-027cb389b2d56d7c6",
            "subnet_id": "subnet-0ad0f2a9e7f84afbe"
          },
          "dependencies": [
            "aws_route_table.rtb",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_internet_gateway.igw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eec1fb0ccb1caad6",
            "route_table_id": "rtb-027cb389b2d56d7c6",
            "subnet_id": "subnet-0a846821029f0e863"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893725594362:security-group/sg-04900d73b4eff1866",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04900d73b4eff1866",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_elb_sg",
            "name_prefix": "",
            "owner_id": "893725594362",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce038eb4a232bc00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893725594362:security-group/sg-0468ac8cfce5e9971",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0468ac8cfce5e9971",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "893725594362",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce038eb4a232bc00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893725594362:subnet/subnet-0ad0f2a9e7f84afbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0ad0f2a9e7f84afbe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "893725594362",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-subnet1"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-subnet1"
            },
            "vpc_id": "vpc-0ce038eb4a232bc00"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893725594362:subnet/subnet-0a846821029f0e863",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0a846821029f0e863",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "893725594362",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-subnet2"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-subnet2"
            },
            "vpc_id": "vpc-0ce038eb4a232bc00"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893725594362:vpc/vpc-0ce038eb4a232bc00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-083d82a3a600e3126",
            "default_route_table_id": "rtb-047981829aed6a886",
            "default_security_group_id": "sg-0a5cb675f7cfb1afc",
            "dhcp_options_id": "dopt-0d66bb1f1a1583de6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ce038eb4a232bc00",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-047981829aed6a886",
            "owner_id": "893725594362",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}